# odeya-console

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
cases/django__django-11119/: issue.md  meta.json  tests.txt
cases/django__django-11179/: issue.md  meta.json  tests.txt
cases/matplotlib__matplotlib-24627/: issue.md  meta.json  tests.txt
evidence/: build-snapshot.json  keyed-demo-ledger.jsonl
src/odeya/: __init__.py  __main__.py  cases.py  cli.py  detector_vendor.py  judge.py  ledger.py
tests/: test_cases.py  test_cli.py  test_detector.py  test_evidence.py  test_judge.py  test_ledger.py  test_readme.py
