[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "odeya-console"
version = "0.1.0"
description = "A layered audit CLI for AI-generated patches"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Wahnich" }]
dependencies = [
  "openai>=2.0,<3",
]

[project.scripts]
odeya = "odeya.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.hatch.build]
include = [
  "src/odeya",
  "cases",
  "README.md",
  "LICENSE",
  "NOTICE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/odeya"]

[tool.hatch.build.targets.wheel.force-include]
"cases" = "odeya/case_data"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

